--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	
@@ -124,7 +124,7 @@
 	</section>
 	<section id="works" class="my_project">
 		<div class="project_item">
-			<h2><span>My project<span></h2>
+			<h2><span>My projects<span></h2>
 			<div class="container project">
     			<div class="row_2">
     				<div class="picture">
@@ -224,7 +224,7 @@
     			<div class="data">
     				<div class="data_1 email">
     					<h3><i class="far fa-envelope fa-2x"></i></h3>
-    					<p>magdalena.balun@gmail.com<p>
+    					<p>magdalenabalun@gmail.com<p>
   					</div>
   					<div class="data_1 phone_nr">
   						<h3><i class="fas fa-phone fa-2x"></i></h3>
@@ -242,7 +242,7 @@
 	<section class="footer">
 		<div class="container _footer">
             <div class="foot1">
-                <p>magdalena.balun@gmail.com</p>
+                <p>magdalenabalun@gmail.com</p>
                 <p><i class="fas fa-phone"></i>+48 518 643 299</p>
             </div>
             <div class="foot2">
@@ -256,7 +256,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"
     integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
     crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
     <a href="#" title="Up" id="scroll-to-top"><i class="fa fa-chevron-circle-up fa-4x"></i></a>
 </body>
 </html>
