--- a/index.html
+++ b/index.html
@@ -12,22 +12,19 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	
 	<section id="home" class="jumbotron">
         <div class="container">
             <nav id="nav" class="navbar navbar-dark">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                        <span class="sr-only">Toggle navigation</span>
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menubar">
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
                     <div class="logo">MB</div>
                 </div>
-                <div class="collapse navbar-collapse">
+                <div class="collapse navbar-collapse" id="menubar">
                     <ul class="nav navbar-nav">
-                        <!-- <li><a href="#home">Home</a></li> -->
                         <li><a href="#aboutMe">About me</a></li>
                         <li><a href="#skills">Skills</a></li>
                         <li><a href="#works">Works</a></li>
@@ -42,8 +39,6 @@
 				<p>Magda Balun</p>
 			</div>
 		</div>
-        <!-- <div id="startchange"></div> -->
-
     </section>
     <section id="aboutMe" class="about_Me">
 		<div class="row about">
