--- a/index.html
+++ b/index.html
@@ -174,14 +174,14 @@
     			<div class="row_2">
     				<div class="picture">
     					<div class="layer_gal">
-   							<h2>ToDo List</h2>
+   							<h2>Kanban Board</h2>
     						<p>
-    							Application written in ReactJS using Webpack.
+    							Fully functional kanban created in HTML, CSS3, jQuery, AJAX, API.
     						</p>
-    						<a href="https://github.com/MagBal/ToDo-List"><i class="fab fa-github fa-2x"></i></a>
-							<a href=""><i class="fa fa-eye fa-2x"></i></a>
+    						<a href="https://github.com/MagBal/Kanban-Board"><i class="fab fa-github fa-2x"></i></a>
+							<a href="https://magbal.github.io/Kanban-Board/"><i class="fa fa-eye fa-2x"></i></a>
   						</div>
-    					<img src="./img/project7.jpg" alt="css">
+    					<img src="./img/project9.jpg" alt="css">
     				</div>
     				<div class="picture">
     					<div class="layer_gal">
@@ -190,7 +190,7 @@
     							ChatApp application written in ReactJS using NodeJS, ExpressJS and Socket.io libraries.
     						</p>
     						<a href="https://github.com/MagBal/ChatApp"><i class="fab fa-github fa-2x"></i></a>
-							<a href=""><i class="fa fa-eye fa-2x"></i></a>
+							<!-- <a href=""><i class="fa fa-eye fa-2x"></i></a> -->
   						</div>
     					<img src="./img/project4.jpg" alt="css">
     				</div>
